--- a/preprocessing/Preprocessing.ipynb
+++ b/preprocessing/Preprocessing.ipynb
@@ -15,7 +15,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "raw_file_location = \"../data/raw/steam-200k.csv\"\n",
@@ -146,7 +148,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The the average of purchase is:  1.0\n"
+      "('The the average of purchase is: ', 1.0)\n"
      ]
     },
     {
@@ -250,7 +252,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The the average hours played is:  48.878063243911484\n"
+      "('The the average hours played is: ', 48.878063243911484)\n"
      ]
     },
     {
@@ -452,8 +454,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The number of unique users are:  11350\n",
-      "The number of unique games are:  3600\n"
+      "('The number of unique users are: ', 11350)\n",
+      "('The number of unique games are: ', 3600)\n"
      ]
     }
    ],
@@ -468,7 +470,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"One Hot Encoding the data\"\"\"\n",
@@ -487,20 +491,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/james.f.xue/anaconda2/envs/py36/lib/python3.6/site-packages/ipykernel_launcher.py:12: SettingWithCopyWarning: \n",
+      "/Users/Muf/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
       "  if sys.path[0] == '':\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0%\n",
-      "10%\n",
-      "20%\n"
      ]
     }
    ],
@@ -545,31 +540,113 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#data preprocessing\n",
+    "\n",
+    "def getCustomerID(user,users):\n",
+    "    return int(users.index(user))\n",
+    "\n",
+    "def getGameID(game,games):\n",
+    "    return int(games.index(game))\n",
+    "\n",
+    "#create customers list\n",
+    "customers=[]\n",
+    "for cust in unique_users:\n",
+    "    customers.append(cust)\n",
+    "#create customers file\n",
+    "customers_df= pd.DataFrame(customers, columns=['user'])\n",
+    "customers_df.to_csv(processed_directory+\"/customers.csv\")\n",
+    "\n",
+    "#create games list\n",
+    "games=[]\n",
+    "for game in unique_games:\n",
+    "    games.append(game)\n",
+    "#create games file\n",
+    "games_df= pd.DataFrame(games, columns=['game'])\n",
+    "games_df.to_csv(processed_directory+\"/games.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done\n"
+     ]
+    }
+   ],
+   "source": [
+    "#create hours played file\n",
+    "hours_df= pd.DataFrame(columns=['userIndex','gameID','hours'])\n",
+    "for index, row in play.iterrows():\n",
+    "    hours_df = hours_df.append({'userIndex':getCustomerID(row['user_id'],customers),'gameID':getGameID(row['game_name'],games),'hours':row['indicator-hours']}, ignore_index=True)\n",
+    "hours_df.to_csv(processed_directory+\"/hours.csv\")\n",
+    "print 'done'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   userIndex  gameID  hours\n",
+      "0        0.0     0.0  273.0\n",
+      "1        0.0     1.0   87.0\n",
+      "2        0.0     2.0   14.9\n",
+      "3        0.0     3.0   12.1\n",
+      "4        0.0     4.0    8.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "print hours_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#create hours play matrix\n",
+    "playM=np.zeros((len(unique_users),len(unique_games)))\n",
+    "playM.fill(np.nan)\n",
+    "\n",
+    "for index, row in hours_df.iterrows():\n",
+    "    playM"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
