create U V factored matrices

--- a/models/MatrixFactorization.ipynb
+++ b/models/MatrixFactorization.ipynb
@@ -2,20 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#matrix factorization\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import implicit as im\n",
+    "from scipy.sparse import csr_matrix\n",
     "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -34,140 +37,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1508, 1682, 1109, 876, 1170, 2864, 651, 2229, 1805, 515, 3423, 1769, 2514, 984, 1549, 2518, 3468, 356, 1467, 3453, 1770, 693, 1973, 3297, 704, 1541, 330, 2708, 2297, 1217, 1530, 606, 1547, 1711, 1919, 2043, 2060, 1275, 2520, 517, 2497, 1816, 3157, 2552, 41, 1049, 1355, 3523, 2279, 812, 1929, 649, 3047, 3322, 296, 2011, 2858, 670, 3594, 793, 795, 1034, 3104, 1593, 809, 1838, 3497, 2646, 371, 1855, 133, 1569, 1283, 2318, 2823, 742, 1156, 287, 2571, 2020]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "random.seed(43)\n",
-    "rdCustIndex = random.sample(range(0,len(customers)-1),8000)\n",
-    "rdGameID = random.sample(range(0,len(games)-1),80)\n",
-    "print rdGameID"
+    "random.seed(43)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ nan  nan  nan ...,  nan  nan  nan]\n",
-      " [ nan  nan  nan ...,  nan  nan  nan]\n",
-      " [ nan  nan  nan ...,  nan  nan  nan]\n",
-      " ..., \n",
-      " [ nan  nan  nan ...,  nan  nan  nan]\n",
-      " [ nan  nan  nan ...,  nan  nan  nan]\n",
-      " [ nan  nan  nan ...,  nan  nan  nan]]\n"
+      "users 2130\n",
+      "games 75\n"
      ]
     }
    ],
    "source": [
-    "#create hours matrix customers by games\n",
-    "M=np.zeros((len(rdCustIndex),len(rdGameID)))\n",
-    "M.fill(np.nan)\n",
+    "userGameGroup = hours.groupby('userIndex', as_index=False).agg({\"hours\": \"count\"})\n",
+    "goodUsers = userGameGroup[userGameGroup.hours > 5]\n",
+    "userSample=[]\n",
+    "for userI in goodUsers['userIndex']:\n",
+    "    userSample.append(userI)\n",
+    "print 'users', len(userSample)\n",
+    "gameGroup = hours.groupby('gameID', as_index=False).agg({\"hours\": \"count\"})\n",
+    "goodGames = gameGroup[gameGroup.hours > 150]\n",
+    "gameSample=[]\n",
+    "for gameI in goodGames['gameID']:\n",
+    "    gameSample.append(gameI)\n",
+    "print 'games', len(gameSample)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# create hours matrix games by customer csr matrix\n",
+    "playM=np.zeros((len(goodGames),len(goodUsers)))\n",
+    "playM.fill(np.nan)\n",
     "\n",
     "for index, row in hours.iterrows():\n",
-    "    if(row['userIndex'] in rdCustIndex and row['gameID'] in rdGameID):\n",
-    "        M[rdCustIndex.index(row['userIndex'])][rdGameID.index(row['gameID'])]=row['hours']\n",
-    "print M"
+    "    if(row['userIndex'] in userSample and row['gameID'] in gameSample):\n",
+    "        playM[gameSample.index(row['gameID'])][userSample.index(row['userIndex'])]=row['hours']\n",
+    "print playM.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 15.0/15 [00:00<00:00, 38.78it/s]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan\n",
-      "  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan\n",
-      "  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan\n",
-      "  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan\n",
-      "  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan\n",
-      "  nan  nan  nan  nan  nan]\n"
+      "(2130, 15)\n",
+      "(75, 15)\n"
      ]
-    }
-   ],
-   "source": [
-    "print M[1192]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
+    },
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[ nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan\n",
-      "  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan\n",
-      "  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan\n",
-      "  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan\n",
-      "  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan\n",
-      "  nan  nan  nan  nan  nan]\n"
+      "\n"
      ]
     }
    ],
    "source": [
-    "print M[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan\n",
-      "  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan\n",
-      "  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan\n",
-      "  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan\n",
-      "  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan\n",
-      "  nan  nan  nan  nan  nan]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print M[7]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan\n",
-      "  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan\n",
-      "  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan\n",
-      "  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan\n",
-      "  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan\n",
-      "  nan  nan  nan  nan  nan]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print M[90]"
+    "playM = csr_matrix(playM)\n",
+    "\n",
+    "model = im.als.AlternatingLeastSquares(factors=15)\n",
+    "\n",
+    "model.fit(playM)\n",
+    "\n",
+    "user_games = playM.T.tocsr()\n",
+    "recommendations = model.recommend(3, user_games,10)\n",
+    "\n",
+    "print model.user_factors.shape\n",
+    "print model.item_factors.shape\n"
    ]
   },
   {
