added top k recommendation check

--- a/models/MatrixFactorization.ipynb
+++ b/models/MatrixFactorization.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,12 +78,26 @@
     "    error=0\n",
     "    for index, row in testRatings.iterrows():\n",
     "        error+=(R[users.index(row['userIndex'])][items.index(row['gameID'])]-row['hours'])**2\n",
-    "    return error"
+    "    return error\n",
+    "\n",
+    "def column(matrix, i):\n",
+    "    return [row[i] for row in matrix]\n",
+    "\n",
+    "def correctRecommendations(users, model, matrix, testRatings, topK=10):\n",
+    "    recommended=0\n",
+    "    missed=0\n",
+    "    for index, row in testRatings.iterrows():\n",
+    "        topRecommends = column(model.recommend(users.index(row['userIndex']), matrix, topK),0)\n",
+    "        if(row['gameID'] in topRecommends):\n",
+    "            recommended+=1\n",
+    "        else:\n",
+    "            missed+=1\n",
+    "    return recommended, missed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -131,33 +145,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15.0/15 [00:00<00:00, 69.23it/s]\n"
+      "100%|██████████| 2000.0/2000 [00:17<00:00, 89.04it/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(24, 0.38004065), (39, 0.33562121), (20, 0.32220578), (51, 0.31440532), (68, 0.24475956), (42, 0.23296246), (8, 0.22720501), (15, 0.22421463), (47, 0.21951853), (31, 0.20857909)]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
     "#matrix factorization model\n",
-    "model = im.als.AlternatingLeastSquares(factors=15)\n",
+    "model = im.als.AlternatingLeastSquares(factors=15,iterations=2000, regularization=.01)\n",
     "model.fit(M)\n",
     "\n",
     "#factored U users and V items matrices\n",
     "U = model.user_factors\n",
     "V = model.item_factors\n",
     "\n",
-    "#user_games = playM.T.tocsr()\n",
-    "#recommendations = model.recommend(3, user_games,10)"
+    "user_games = M.T.tocsr()\n",
+    "recommendations = model.recommend(3, user_games,10)\n",
+    "print recommendations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -177,20 +206,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "71282146.1954\n"
+      "71260287.6294\n",
+      "(118, 1819)\n"
      ]
     }
    ],
    "source": [
     "#get accuracy from test data\n",
-    "print squaredError(users, items, R, testRatings)\n"
+    "print squaredError(users, items, R, testRatings)\n",
+    "print correctRecommendations(users, model, user_games, testRatings, 10)"
    ]
   },
   {
